Prevent gap to left of hyperlink dialog mail fields
In CORE, there is an address book after the 'URL' field. We hide this in online, but this causes a third column to be added, which is then given a third of the spare width due to the auto property. This leaves a gap, which is solved by adding css to set the width to 0px.

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -2359,6 +2359,11 @@ kbd,
 	display: none;
 }
 
+/* Third column has nothing to display */
+#HyperlinkMailPage #grid1 {
+	grid-template-columns: repeat(2, auto) 0px !important;
+}
+
 /* feature_lock */
 #modal-dialog-unlock-features-popup {
 	width: 652px;
